droplet-1.06（进行中）
------------------------------------------------------------------------
1.


run-2.00（进行中）
------------------------------------------------------------------------
1.全面弃用InstaPy
2.全面改版login流程，标准化每个步骤的判定和执行，大幅提高可维护性和可拓展性


run-1.49
------------------------------------------------------------------------
1.新增在云服务器上对gui模式的支持。实现原理为在云上运行Xvfb服务
2.从此版本开始，在开启gui模式的时候，可以通过插件来让chrome支持代理
3.支持warm-up模式。详见readme.txt


run-1.48
------------------------------------------------------------------------
1.新增半速版本的follow，like脚本
2.由于最近发生的代理无法连接的问题，install.sh现在固定安装66.0版本的firefox，并阻止自动更新
3.在login流程中，增加对2-way authentication页面的支持
4.将tag也作为pull提取内容的一部分。现在的--pull参数将自动提取目标脚本的tag信息
5.在login流程中，用户每尝试一次输入账号密码，都及时在服务器中用最新的IG账号标记此脚本
6.新增--disable-image参数，用于禁止加载图片


droplet-1.05
------------------------------------------------------------------------
1.支持不使用代理进行login。新增一个参数--use-proxy来控制是否使用代理，默认为使用
2.新增开机自动开启Xvfb服务以支持gui模式的脚本运行在云端


run-1.47
------------------------------------------------------------------------
1.弃用InstaPy自带的中断响应函数，自行捕捉SIGINT、SIGTERM、SIGKILL三种信号
2.为了更好地支持重试登录，扩充了脚本登录的事件集
    a.session结束和script结束现在是独立的事件，具有更强的逻辑含义
    b.session结束事件与释放proxypool代理关联，script结束事件与判断登录结果关联
3.更新脚本在query模式时的数据库查询方式，现在能更准确及时地反映前端用户输入
4.为每个脚本保存登录时输入的用户名/密码记录。用于为没登录成功的脚本提供线索
5.弃用InstaPy内置的获取followers数量办法。现在使用用户数据json页面作为信息源
6.like过程中，每次获取的50个hashtag，只留其中10个，并且打乱顺序
7.登录过程中，在发送验证码之后，也可能需要点this was me。新增对这种情况的应对


droplet-1.04
------------------------------------------------------------------------
1.配合前端、脚本两方面的需求，droplet服务在开启新login脚本时，默认设定2次重新登录机会
2.脚本从1.45到1.46改变了部分参数，导致无法重启脚本。此版本暂时对这个问题进行临时性的兼容
3.登录脚本使用rotating proxy
4.开启新脚本时，允许设定默认的-ap参数
    a.为droplet.py指定的-ap参数，将传递给droplet.py所开启的脚本
    b.对于使用rotating proxy的跑登录脚本的droplet，通过-ap参数来限制它使用一个特定的rotating proxy
5.所有配置参数均可保留至droplet.ini


run-1.46
------------------------------------------------------------------------
1.增加脚本自我重启时，对-s参数的强制继承。这个设定使得在droplet.py环境中的子进程脚本能互相避免deadlock问题
2.将从数据库中查询最新值（主要用于与前端登录方式交互，比如获取用户名密码）的超时设定从600秒提升至900秒