@@ -1,6 +1,7 @@
 droplet-1.06（进行中）
 ------------------------------------------------------------------------
-1.
+1.由于统计地不准确，此版本起，取消脚本内存统计功能
+2.修复开启新脚本时，由于脚本自定义参数错误而导致的http服务器卡住
 
 
 run-2.00（进行中）
@@ -14,6 +15,8 @@ run-1.49
 1.新增在云服务器上对gui模式的支持。实现原理为在云上运行Xvfb服务
 2.从此版本开始，在开启gui模式的时候，可以通过插件来让chrome支持代理
 3.支持warm-up模式。详见readme.txt
+4.修复了chrome加载cookie出错的问题。chrome里，cookie的expiry字段，必须强制确保为unix timestamp整数
+5.为进一步减少脚本流量，优化like脚本的一些细节
 
 
 run-1.48
